# 2023-ponderer

./: CMakeLists.txt  README.md  conanfile.txt
example/: CMakeLists.txt
example/sandbox/: main.cpp
script/: setup_debug.bat  setup_release.bat
src/: CMakeLists.txt  main.cpp
src/ponderer/: CMakeLists.txt  file.hpp  modeling.hpp  shading.hpp
src/ponderer/app/viewer/: CMakeLists.txt  main.cpp
src/ponderer/common/: file.hpp  gpu.hpp  modeling.hpp
src/ponderer/common/communicating/: all.hpp  callbacks.hpp  emitter.hpp  link_end.bdd.hpp  link_end.hpp  none.hpp  receiver_slot.hpp  tags.hpp
src/ponderer/common/file/: all.hpp  context.hpp  exceptions.hpp  file.hpp
src/ponderer/common/gpu/: all.hpp  frame_buffer.hpp  gl.hpp  handles.hpp  ids.hpp  material.hpp  program.hpp  resources.hpp  shader_storage.hpp  tags.hpp  to_acquire.hpp
src/ponderer/common/gpu/context/: buffer.hpp  context.hpp
src/ponderer/common/gpu/opengl/: all.hpp
src/ponderer/common/logging/: all.hpp  entry.hpp  timestamp.hpp
src/ponderer/common/logging/logger/: memory.hpp  storage.hpp
src/ponderer/common/modeling/: camera.hpp  directions.hpp  geometry.hpp  mesh.hpp
src/ponderer/common/typing/: NullTerminated.hpp  all.hpp
src/ponderer/core/: shading.hpp
src/ponderer/core/shading/: basic.frag  billboard.frag  billboard.hpp  billboard.vert  directional_light.hpp  point_light.hpp  ssbo.hpp
src/ponderer/core/windowing/: FileManager.hpp  GpuManager.hpp  GpuManager.inl  MainInterface.hpp  MainInterface.inl  all.hpp  context.hpp
src/ponderer/core/windowing/context/: update.hpp
src/ponderer/core/windowing/file/: manager.hpp  open_dialog.hpp
src/ponderer/core/windowing/inspecting/: file.hpp  texture.hpp
src/ponderer/core/windowing/managing/: scene.hpp
src/ponderer/dep/: CMakeLists.txt
src/ponderer/dep/assimp/: CMakeLists.txt
src/ponderer/dep/catch2/: CMakeLists.txt
src/ponderer/dep/fmt/: CMakeLists.txt  all.hpp
src/ponderer/dep/glad/: CMakeLists.txt
src/ponderer/dep/glfw/: CMakeLists.txt  all.hpp
src/ponderer/dep/glm/: CMakeLists.txt  all.hpp
src/ponderer/dep/imgui/: CMakeLists.txt  all.hpp  wrappers.hpp
src/ponderer/dep/stb/: CMakeLists.txt  all.cpp
src/ponderer/dep/std/: CMakeLists.txt
src/ponderer/dep/std/chrono/: all.hpp
src/ponderer/dep/std/container/: map.hpp
src/ponderer/dep/std/io/: eof.hpp  istream.hpp
src/ponderer/example/: CMakeLists.txt
src/ponderer/example/file_managing/: CMakeLists.txt  main.cpp
src/ponderer/example/imgui_demo/: CMakeLists.txt
src/ponderer/example/sandbox/: CMakeLists.txt  main.cpp  particles.glsl
src/ponderer/example/sandbox_log/: CMakeLists.txt  app.hpp  log_manager.hpp  main.cpp
src/ponderer/file/: content.hpp
src/ponderer/modeling/: camera.hpp  directions.hpp  geometry.hpp  mesh.hpp
src/ponderer/shading/: basic.vert  billboard.cpp  billboard.vert  camera.hpp  model.hpp  ssbo.hpp
src/ponderer/test/: CMakeLists.txt
src/ponderer/test/unit/: communicating.cpp
tool/script/: generate_debug.bat
